# school-management-system-python

./: README.md  pyproject.toml
