[tool.poetry]
name = "school-management-system-python"
version = "0.1.0"
description = ""
authors = ["Arthur <arthurchagas01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
